# Ants

./: .gitignore  .gitmodules
app/: CMakeLists.txt  build.gradle
app/externalNativeBuild/cmake/debug/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/armeabi/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/mips/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/mips64/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/externalNativeBuild/cmake/debug/x86/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  cmake_install.cmake  rules.ninja
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AntManager.cpp  AntManager.h  LuaManager.cpp  LuaManager.h  native-lib.cpp
app/src/main/res/raw/: Ant.lua  (+2 more)
(+65 files in other folders)
